tests/NormalTests/paczka1/small_fuzzy/71018236.err
Error in line 6: NCPNU A932 91,7
Error in line 7: NCPNU A917 81,9
Error in line 12: NCPNU S601 72,9
